[metadata]
name = PyExcel
version = 1.01
description-file = README.md
author = caesar
author-email = author@example.com
classifier =
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7

[files]
packages =
    PyExcel

[entry_points]

console_scripts =
    pyexcel = PyExcel.shell:main
